samples/_failures_safe/1761623973_07fcf7_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f5775c52.c: In function ‘main’:
./samples/SAFE/__tmp_f5775c52.c:188:25: error: missing terminating " character
  188 |         fprintf(stderr, "Error reading input
      |                         ^~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_f5775c52.c:188:9: error: expected expression at end of input
  188 |         fprintf(stderr, "Error reading input
      |         ^~~~~~~
./samples/SAFE/__tmp_f5775c52.c:188:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_f5775c52.c:188:9: error: expected declaration or statement at end of input
